<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/task1">

    <fragment
        android:id="@+id/task1"
        android:name="com.example.galeriaapek.ui.home.HomeFragment"
        android:label="@string/task1"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/task2"
        android:name="com.example.galeriaapek.ui.gallery.GalleryFragment"
        android:label="@string/task2"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/task4"
        android:name="com.example.galeriaapek.ui.Task4.Task4Fragment"
        android:label="@string/task4"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/task3"
        android:name="com.example.galeriaapek.ui.Task3.SlideshowFragment"
        android:label="@string/task3"
        tools:layout="@layout/fragment_slideshow" />
</navigation>